--- a/app/views/albums/_search_form.html.slim
+++ b/app/views/albums/_search_form.html.slim
@@ -1,3 +1,3 @@
-= simple_form_for :album, url: album_search_path do |f|
+= simple_form_for :album, url: '/search', method: 'get' do |f|
   = f.input 'keyword', input_html: { name: 'keyword', id: 'keyword' }
-  = f.submit 'Search'
+  = f.submit 'Search', name: nil
